force-app/main/default/objects/Opportunity/fields/ETT_Annual_Payment_Transfer__c.field-meta.xml
<CustomField>
    <fullName>ETT_Annual_Payment_Transfer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is synced with DocuSign.</description>
    <label>ETT - Annual Payment Transfer</label>
    <type>Checkbox</type>
</CustomField>