force-app/main/default/objects/Opportunity/fields/ETT_Light__c.field-meta.xml
<CustomField>
    <fullName>ETT_Light__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is synced with DocuSign.</description>
    <label>ETT - Light</label>
    <type>Checkbox</type>
</CustomField>