force-app/main/default/objects/Opportunity/fields/ETT_Monthly_Payment__c.field-meta.xml
<CustomField>
    <fullName>ETT_Monthly_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is synced with DocuSign.</description>
    <label>ETT - Monthly Payment</label>
    <type>Checkbox</type>
</CustomField>