force-app/main/default/objects/Opportunity/fields/Proxy_Docusign_Option__c.field-meta.xml
<CustomField>
    <fullName>Proxy_Docusign_Option__c</fullName>
    <label>Proxy Docusign Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Light</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>