force-app/main/default/objects/Opportunity/fields/Recovery_Contact__c.field-meta.xml
<CustomField>
    <fullName>Recovery_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recovery Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Recovery Contact)</relationshipLabel>
    <relationshipName>Opportunities_Recovery</relationshipName>
    <type>Lookup</type>
</CustomField>